force-app/main/default/objects/Purchase_Order__c/fields/Actual_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_PO_Amount__c</fullName>
    <label>Actual PO Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>