force-app/main/default/objects/Purchase_Order__c/fields/INET_Request__c.field-meta.xml
<CustomField>
    <fullName>INET_Request__c</fullName>
    <label>INET Request</label>
    <referenceTo>INET_Request__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>