force-app/main/default/objects/Purchase_Order__c/fields/PO_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Submitted_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Submitted Date</label>
    <type>Date</type>
</CustomField>