force-app/main/default/objects/Purchase_Order__c/validationRules/PO_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>PO Date must be today or in the past, and cannot be blank/null.</description>
    <errorConditionFormula>ISBLANK( PO_Date__c )  ||  PO_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>The PO Date must be TODAY or in the past and must not be blank.</errorMessage>
</ValidationRule>