force-app/main/default/objects/Purchase_Order__c/validationRules/PO_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER( Name ) )</errorConditionFormula>
    <errorMessage>Invalid input on Purchase Order : Numbers only.</errorMessage>
</ValidationRule>