force-app/main/default/objects/Purchase_Order__c/listViews/All_CATV_Purchase_orders.listView-meta.xml
<ListView>
    <fullName>All_CATV_Purchase_orders</fullName>
    <columns>NAME</columns>
    <columns>PO_Amount__c</columns>
    <columns>PO_Submitted_Date__c</columns>
    <columns>Quote__c</columns>
    <columns>Provider__c</columns>
    <columns>Requestor__c</columns>
    <columns>INET_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CATV Purchase orders</label>
</ListView>